Fix crash in ParentAnimation.

When rolling-back a parent change, the actions are in reverse order.

Task-number: QTBUG-10671